Sat Jul 11 11:06:06 2020  Rob Lauer  <rlauer6@comcast.net>

	* Makefile: pattern rule for all .py files
	* makala/__init__.py: import classes
	* makala/lambda_config.py: stub for now
	* makala/makala.py: MakalaConfig
	* makala/makala_config.py: move MakalConfig to above

Sat Jul 11 09:42:08 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/makala.py:
	(MakalConfig):
	- use defaults.get() pattern in __init_ to provide defaults


Fri Jul 10 10:33:26 2020  Rob Lauer  <rlauer6@comcast.net>

	* Makefile: new
	* makala/data/Makefile.jinja2
	- use makala entry point
	- force rebuild of role if make real-clean
	* README.md: added more sections
	* makala/makala.py
	- comments
	- if vpc in config but not defined, provide default

